Fixed overlapping background in artists divs and fixed p elements not aligning properly or having correct font.

--- a/Lab02.css
+++ b/Lab02.css
@@ -31,6 +31,38 @@
     border-top-style: hidden;
 }
 
-.artists:hover {
+.artists>div {
+    height: 80px;
+    width: fit-content;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.artists>div:hover {
     background-color: #F5F5F5;
 }
+
+.image {
+    width: auto;
+    height: 95%;
+    float: left;
+}
+
+.description {
+    float: left;
+}
+
+.description>p:nth-child(n+1) {
+    font-size: 12pt;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.description>p:nth-child(1) {
+    font-size: 16pt;
+}
+
+/*
+    img elements need alternate attributes
+*/
